@@ -11,6 +11,7 @@ Changelog
   Symlinking breaks especially on NixOS since the symlinks point directly to
   the store.
 
+- Hide passwords from output of the `Download` component.
 
 1.3b1 (2016-03-09)
 ==================
